--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
     branches:
       - "master"
   schedule:
-    - cron: "0 * * * *"
+    - cron: "35 */6 * * *"
+  
 
 env:
   PYFUNCEBLE_AUTO_CONFIGURATION: "YES"
@@ -24,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version:
-          - "3.9.1"
+          - "3.12"
         os:
           - ubuntu-latest
 
